test: For GItHub CodeScan drop to java 1.8