@@ -6,14 +6,14 @@ import io.terrible.batch.thumbnails.exceptions.UnableToCalculateDurationExceptio
 import io.terrible.batch.thumbnails.exceptions.UnableToReadFileException;
 import io.terrible.batch.thumbnails.services.ThumbnailService;
 import io.terrible.batch.thumbnails.utils.FileUtils;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayDeque;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.batch.item.ItemProcessor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
-
-import java.nio.file.Path;
-import java.util.ArrayDeque;
 
 @Slf4j
 @Component
@@ -33,8 +33,8 @@ public class ThumbnailProcessor implements ItemProcessor<MediaFile, MediaFile> {
 
     mediaFile.setThumbnailPath(FileUtils.getThumbnailDirectory(baseDir, mediaFile));
 
-    final Path input = Path.of(mediaFile.getPath());
-    final Path output = Path.of(mediaFile.getThumbnailPath());
+    final Path input = Paths.get(mediaFile.getPath());
+    final Path output = Paths.get(mediaFile.getThumbnailPath());
 
     try {
       thumbnails = thumbnailService.createThumbnails(input, output, NUMBER_OF_THUMBNAILS);
